@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2010 Sun Microsystems, Inc.
  * Portions Copyright 2013-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.backends.task;
 
@@ -1248,28 +1249,15 @@ public class TaskScheduler
       writer.close();
 
 
-      // See if there is a ".save" file.  If so, then delete it.
-      File saveFile = getFileForPath(backingFilePath + ".save");
-      try
-      {
-        if (saveFile.exists())
-        {
-          saveFile.delete();
-        }
-      }
-      catch (Exception e)
-      {
-        logger.traceException(e);
-      }
-
-
       // If there is an existing backing file, then rename it to ".save".
+      // renameFile() deletes an existing ".save" file and reports a failure to do so.
+      File saveFile = getFileForPath(backingFilePath + ".save");
       File backingFile = getFileForPath(backingFilePath);
       try
       {
         if (backingFile.exists())
         {
-          backingFile.renameTo(saveFile);
+          renameFile(backingFile, saveFile);
         }
       }
       catch (Exception e)
@@ -1288,7 +1276,7 @@ public class TaskScheduler
       File tmpFile = getFileForPath(tmpFilePath);
       try
       {
-        tmpFile.renameTo(backingFile);
+        renameFile(tmpFile, backingFile);
       }
       catch (Exception e)
       {
@@ -1857,7 +1845,7 @@ public class TaskScheduler
     Task task;
     try
     {
-      task = (Task) taskClass.newInstance();
+      task = (Task) taskClass.getDeclaredConstructor().newInstance();
     }
     catch (Exception e)
     {
